# hyprfen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml
scripts/: benchmark_lichess.py  report_lichess_savings.py
src/hyprfen/: __init__.py  bitops.py  bitstream.py  codec.py  lichess_sample.py
tests/: test_codec_unit.py  test_roundtrip_lichess.py
