[project]
name = "hyprfen"
version = "0.1.0"
description = "Fast, compact, reversible binary encoding for standard chess FENs."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "chess>=1.11.2",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9",
  "zstandard>=0.23,<1",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyprfen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.uv]
default-groups = ["dev"]
