[project]
name = "hyprfen"
version = "0.1.0"
description = "Fast, compact, reversible binary encoding for standard chess FENs."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "chess>=1.11.2",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9",
  "uv_build>=0.11.3,<0.12",
  "zstandard>=0.23,<1",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.uv]
default-groups = ["dev"]
